fix: add axios cdn

--- a/src/pages/produtos.html
+++ b/src/pages/produtos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Home page</title>
+    <title>Products</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -73,7 +73,9 @@
         <h1>Nossos Produtos</h1>
         <form>
           <input id="searchBar" placeholder="Busca..." autocomplete="off" />
-          <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+          <button type="submit">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
         </form>
         <div id="produtos"></div>
       </div>
@@ -81,4 +83,10 @@
   </body>
   <script type="text/javascript" src="../utils/handleUser.js"></script>
   <script type="text/javascript" src="../utils/products.js"></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"
+    integrity="sha512-emSwuKiMyYedRwflbZB2ghzX8Cw8fmNVgZ6yQNNXXagFzFOaQmbvQ1vmDkddHjm5AITcBIZfC7k4ShQSjgPAmQ=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  ></script>
 </html>
