--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -17,7 +17,10 @@
     <link rel="stylesheet" href="../styles/GlobalThemes.css" />
   </head>
   <body>
-    <div id="container">
+    <div id="BaseLayoutContainer">
+      <header class="text-white text-center py-2">
+        <h1>Home</h1>
+      </header>
       <div id="sidebar">
         <div
           class="d-flex flex-column justify-content-between col-auto bg-dark vh-100"
@@ -68,7 +71,10 @@
           </div>
         </div>
       </div>
-      <div id="content">O conteudo vai aki</div>
+      <content> Here is content </content>
+      <footer class="text-center py-1">
+        <p>&copy; 2023 Solaris Power. Todos os direitos reservados.</p>
+      </footer>
     </div>
   </body>
   <script type="text/javascript" src="../utils/handleUser.js"></script>
