--- a/src/pages/produtos.html
+++ b/src/pages/produtos.html
@@ -18,7 +18,10 @@
     <link rel="stylesheet" href="../styles/cardProduct.css" />
   </head>
   <body>
-    <div id="container">
+    <div id="BaseLayoutContainer">
+      <header class="text-white text-center py-2">
+        <h1>Produtos</h1>
+      </header>
       <div id="sidebar">
         <div
           class="d-flex flex-column justify-content-between col-auto bg-dark vh-100"
@@ -69,20 +72,25 @@
           </div>
         </div>
       </div>
-      <div id="content">
-        <h1>Nossos Produtos</h1>
-        <form>
-          <input id="searchBar" placeholder="Busca..." autocomplete="off" />
-          <button type="submit">
-            <i class="fa-solid fa-magnifying-glass"></i>
-          </button>
-        </form>
-        <div id="produtos"></div>
-      </div>
+      <content>
+        <div id="produtosWrapper">
+          <form>
+            <input id="searchBar" placeholder="Busca..." autocomplete="off" />
+            <button type="submit">
+              <i class="fa-solid fa-magnifying-glass"></i>
+            </button>
+          </form>
+          <div id="produtos"></div>
+        </div>
+      </content>
+      <footer class="text-center py-1">
+        <p>&copy; 2023 Solaris Power. Todos os direitos reservados.</p>
+      </footer>
     </div>
   </body>
   <script type="text/javascript" src="../utils/handleUser.js"></script>
   <script type="text/javascript" src="../utils/products.js"></script>
+  <script type="text/javascript" src="../utils/index.js"></script>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"
     integrity="sha512-emSwuKiMyYedRwflbZB2ghzX8Cw8fmNVgZ6yQNNXXagFzFOaQmbvQ1vmDkddHjm5AITcBIZfC7k4ShQSjgPAmQ=="
