--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -78,6 +78,10 @@
     </div>
   </body>
   <script type="text/javascript" src="../utils/handleUser.js"></script>
+  <script type="text/javascript" src="../utils/permission.js"></script>
+  <script type="text/javascript" src="../constants/index.js"></script>
+  <script src="sweetalert2.all.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"
     integrity="sha512-emSwuKiMyYedRwflbZB2ghzX8Cw8fmNVgZ6yQNNXXagFzFOaQmbvQ1vmDkddHjm5AITcBIZfC7k4ShQSjgPAmQ=="
