--- a/src/pages/produtos.html
+++ b/src/pages/produtos.html
@@ -91,6 +91,8 @@
   <script type="text/javascript" src="../utils/handleUser.js"></script>
   <script type="text/javascript" src="../utils/products.js"></script>
   <script type="text/javascript" src="../utils/index.js"></script>
+  <script type="text/javascript" src="../utils/permission.js"></script>
+  <script type="text/javascript" src="../constants/index.js"></script>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"
     integrity="sha512-emSwuKiMyYedRwflbZB2ghzX8Cw8fmNVgZ6yQNNXXagFzFOaQmbvQ1vmDkddHjm5AITcBIZfC7k4ShQSjgPAmQ=="
