--- a/src/pages/sobre.html
+++ b/src/pages/sobre.html
@@ -111,6 +111,8 @@
   </body>
   <script type="text/javascript" src="../utils/handleUser.js"></script>
   <script type="text/javascript" src="../services/api.js"></script>
+  <script type="text/javascript" src="../utils/permission.js"></script>
+  <script type="text/javascript" src="../constants/index.js"></script>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"
     integrity="sha512-emSwuKiMyYedRwflbZB2ghzX8Cw8fmNVgZ6yQNNXXagFzFOaQmbvQ1vmDkddHjm5AITcBIZfC7k4ShQSjgPAmQ=="
