--- a/page.html
+++ b/page.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../styles/GlobalThemes.css" />
-    <title>Login</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Boostrap Login | Ludiflex</title>
   </head>
   <body>
     <div
@@ -23,10 +20,21 @@
           class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box"
           style="background: #103cbe"
         >
-          <p class="text-white fs-2">
-            <i class="fa-solid fa-solar-panel text-white"></i>
+          <div class="featured-image mb-3">
+            <img src="images/1.png" class="img-fluid" style="width: 250px" />
+          </div>
+          <p
+            class="text-white fs-2"
+            style="
+              font-family: 'Courier New', Courier, monospace;
+              font-weight: 600;
+            "
+          >
+            Be Verified
           </p>
-          <small class="text-white text-wrap text-center" style="width: 17rem"
+          <small
+            class="text-white text-wrap text-center"
+            style="width: 17rem; font-family: 'Courier New', Courier, monospace"
             >Transforme a luz do sol em energia para o seu futuro!</small
           >
         </div>
@@ -39,7 +47,7 @@
             <div class="form-floating mb-3">
               <input
                 type="email"
-                class="form-control bg-light"
+                class="form-control"
                 id="floatingInput"
                 placeholder="name@example.com"
               />
@@ -70,22 +78,14 @@
               </div>
             </div>
             <div class="input-group mb-3">
-              <button
-                class="btn btn-lg btn-primary w-100 fs-6"
-                onclick="handleLogin(event)"
-              >
-                Login
-              </button>
+              <button class="btn btn-lg btn-primary w-100 fs-6">Login</button>
             </div>
             <div class="row">
-              <small>Não tem uma conta ainda? <a href="./register.html">Registrar</a></small>
+              <small>Não tem uma conta ainda? <a href="#">Registrar</a></small>
             </div>
           </div>
         </div>
       </div>
     </div>
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script type="text/javascript" src="../utils/handleUser.js"></script>
-  <script type="text/javascript" src="../db/index.js"></script>
 </html>
