--- a/src/pages/account.html
+++ b/src/pages/account.html
@@ -3,16 +3,178 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Editar Usuario</title>
+    <title>Painel Usuário</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../styles/GlobalThemes.css" />
   </head>
   <body>
-    <script src="" async defer></script>
-    <script type="text/javascript" src="../utils/permission.js"></script>
-    <script type="text/javascript" src="../constants/index.js"></script>
-    <script src="sweetalert2.all.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <div id="BaseLayoutContainer">
+      <header class="text-white text-center py-2">
+        <h1>Conta</h1>
+      </header>
+      <div id="sidebar">
+        <div
+          class="d-flex flex-column justify-content-between col-auto bg-dark vh-100"
+        >
+          <div class="mt-4">
+            <a
+              class="text-white text-decoration-none d-flex align-items-center p-2"
+              role="button"
+            >
+              <h1 class="d-none d-sm-inline">Solaris Power</h1>
+            </a>
+            <hr class="text-white" />
+            <ul class="nav nav-pills flex-column mt-2 mt-sm-0" id="menu">
+              <li class="nav-item">
+                <a href="./index.html" class="nav-link" aria-current="page">
+                  <i class="fa-solid fa-house"></i>
+                  <span class="ms-2 d-none d-sm-inline">Home</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="./sobre.html" class="nav-link" aria-current="page">
+                  <i class="fa-solid fa-address-card"></i>
+                  <span class="ms-2 d-none d-sm-inline">Sobre</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="./produtos.html" class="nav-link" aria-current="page">
+                  <i class="fa-solid fa-store"></i>
+                  <span class="ms-2 d-none d-sm-inline">Produtos</span>
+                </a>
+              </li>
+              <li class="nav-item d-none" id="account">
+                <a href="./account.html" class="nav-link" aria-current="page">
+                  <i class="fa-solid fa-user"></i>
+                  <span class="ms-2 d-none d-sm-inline">Conta</span>
+                </a>
+              </li>
+              <li class="nav-item d-none" id="crudItens">
+                <a href="./crud-itens.html" class="nav-link" aria-current="page">
+                  <i class="fa-solid fa-list"></i>
+                  <span class="ms-2 d-none d-sm-inline">CRUD Itens</span>
+                </a>
+              </li>
+              <li class="nav-item d-none" id="crudUsers">
+                <a
+                  href="./crud-users.html"
+                  class="nav-link"
+                  aria-current="page"
+                >
+                  <i class="fa-solid fa-users"></i>
+                  <span class="ms-2 d-none d-sm-inline">CRUD Users</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <div id="userStatus"></div>
+            <button id="loginButton" class="btn btn-primary mb-3 ms-3">
+              <i class="fa-solid fa-right-to-bracket"></i
+              ><span class="ms-1 d-none d-sm-inline">Login</span>
+            </button>
+            <button
+              id="logoutButton"
+              class="btn btn-danger mb-3 ms-3"
+              style="display: none"
+            >
+              <i class="fa-solid fa-right-from-bracket"></i
+              ><span class="ms-1 d-none d-sm-inline">Logout</span>
+            </button>
+          </div>
+        </div>
+      </div>
+      <content id="isVisible" class="d-none">
+        <div class="row align-items-center">
+          <div class="header-text text-center">
+            <h2>Altere seus dados aqui!</h2>
+          </div>
+          <div class="form-group mb-3">
+            <label for="photoUpload">Avatar: </label>
+            <input
+              type="file"
+              class="form-control-file"
+              id="photoUpload"
+              accept="image/*"
+            />
+            <div
+              id="photoPreview"
+              class="mt-3 d-flex justify-content-center align-items-center"
+            ></div>
+          </div>
+          <div class="form-floating mb-3">
+            <input
+              type="text"
+              class="form-control bg-light"
+              id="floatingName"
+              placeholder="Nome"
+            />
+            <label for="floatingName">Nome</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input
+              type="email"
+              class="form-control bg-light"
+              id="floatingEmail"
+              placeholder="Email"
+            />
+            <label for="floatingEmail">Email</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input
+              type="password"
+              readonly
+              class="form-control form-control-lg bg-light fs-6"
+              id="floatingPassword"
+              placeholder="Senha"
+            />
+            <label for="floatingPassword">Senha</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input
+              type="password"
+              readonly
+              class="form-control form-control-lg bg-light fs-6"
+              id="floatingPasswordConfirm"
+              placeholder="Confirmar Senha"
+            />
+            <label for="floatingPasswordConfirm">Confirmar Senha</label>
+          </div>
+          <div
+            class="input-group mb-3 align-items-center justify-content-center"
+          >
+            <button
+              class="btn btn-lg btn-primary w-10 fs-6"
+              onclick="handleEdit(event)"
+            >
+              Salvar
+            </button>
+          </div>
+        </div></content
+      >
+      <footer class="text-center py-1">
+        <p>&copy; 2023 Solaris Power. Todos os direitos reservados.</p>
+      </footer>
+    </div>
   </body>
+  <script type="text/javascript" src="../utils/handleUser.js"></script>
+  <script type="text/javascript" src="../utils/permission.js"></script>
+  <script type="text/javascript" src="../constants/index.js"></script>
+  <script src="sweetalert2.all.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"
+    integrity="sha512-emSwuKiMyYedRwflbZB2ghzX8Cw8fmNVgZ6yQNNXXagFzFOaQmbvQ1vmDkddHjm5AITcBIZfC7k4ShQSjgPAmQ=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  ></script>
 </html>
