--- a/src/pages/crud-itens.html
+++ b/src/pages/crud-itens.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Products</title>
+    <title>Crud Itens</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -11,16 +11,27 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.css"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../styles/GlobalThemes.css" />
-    <link rel="stylesheet" href="../styles/cardProduct.css" />
   </head>
   <body>
     <div id="BaseLayoutContainer">
       <header class="text-white text-center py-2">
-        <h1>Produtos</h1>
+        <h1>Crud Itens</h1>
       </header>
       <div id="sidebar">
         <div
@@ -66,7 +77,7 @@
                 </a>
               </li>
               <li class="nav-item d-none" id="crudUsers">
-                <a href="./crud-users.html" class="nav-link" aria-current="page">
+                <a href="./account.html" class="nav-link" aria-current="page">
                   <i class="fa-solid fa-users"></i>
                   <span class="ms-2 d-none d-sm-inline">CRUD Users</span>
                 </a>
@@ -90,16 +101,20 @@
           </div>
         </div>
       </div>
-      <content id="isVisible">
-        <div id="produtosWrapper">
-          <form>
-            <input id="searchBar" placeholder="Busca..." autocomplete="off" />
-            <button type="submit">
-              <i class="fa-solid fa-magnifying-glass"></i>
-            </button>
-          </form>
-          <div id="produtos"></div>
-        </div>
+      <content id="isVisible" class="d-none">
+        <table id="itensTable" class="table table-striped" style="width: 100%">
+          <thead>
+            <tr>
+              <th>Id</th>
+              <th>Nome</th>
+              <th>Descrição</th>
+              <th>URL Img</th>
+              <th>Qtd</th>
+              <th>Preço</th>
+              <th>Ação</th>
+            </tr>
+          </thead>
+        </table>
       </content>
       <footer class="text-center py-1">
         <p>&copy; 2023 Solaris Power. Todos os direitos reservados.</p>
@@ -107,14 +122,19 @@
     </div>
   </body>
   <script type="text/javascript" src="../utils/handleUser.js"></script>
-  <script type="text/javascript" src="../utils/products.js"></script>
   <script type="text/javascript" src="../utils/index.js"></script>
   <script type="text/javascript" src="../utils/permission.js"></script>
   <script type="text/javascript" src="../constants/index.js"></script>
+  <script type="text/javascript" src="../db/index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
+  <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"
     integrity="sha512-emSwuKiMyYedRwflbZB2ghzX8Cw8fmNVgZ6yQNNXXagFzFOaQmbvQ1vmDkddHjm5AITcBIZfC7k4ShQSjgPAmQ=="
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   ></script>
+  <script type="text/javascript" src="../services/dataTable.js"></script>
 </html>
