--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -52,6 +52,24 @@
                   <span class="ms-2 d-none d-sm-inline">Produtos</span>
                 </a>
               </li>
+              <li class="nav-item d-none" id="account">
+                <a href="./account.html" class="nav-link" aria-current="page">
+                  <i class="fa-solid fa-user"></i>
+                  <span class="ms-2 d-none d-sm-inline">Conta</span>
+                </a>
+              </li>
+              <li class="nav-item d-none" id="crudItens">
+                <a href="./crud-itens.html" class="nav-link" aria-current="page">
+                  <i class="fa-solid fa-list"></i>
+                  <span class="ms-2 d-none d-sm-inline">CRUD Itens</span>
+                </a>
+              </li>
+              <li class="nav-item d-none" id="crudUsers">
+                <a href="./crud-users.html" class="nav-link" aria-current="page">
+                  <i class="fa-solid fa-users"></i>
+                  <span class="ms-2 d-none d-sm-inline">CRUD Users</span>
+                </a>
+              </li>
             </ul>
           </div>
           <div>
@@ -71,7 +89,7 @@
           </div>
         </div>
       </div>
-      <content> Here is content </content>
+      <content id="isVisible"> Here is content </content>
       <footer class="text-center py-1">
         <p>&copy; 2023 Solaris Power. Todos os direitos reservados.</p>
       </footer>
