--- a/src/pages/sobre.html
+++ b/src/pages/sobre.html
@@ -53,6 +53,24 @@
                   <span class="ms-2 d-none d-sm-inline">Produtos</span>
                 </a>
               </li>
+              <li class="nav-item d-none" id="account">
+                <a href="./account.html" class="nav-link" aria-current="page">
+                  <i class="fa-solid fa-user"></i>
+                  <span class="ms-2 d-none d-sm-inline">Conta</span>
+                </a>
+              </li>
+              <li class="nav-item d-none" id="crudItens">
+                <a href="./crud-itens.html" class="nav-link" aria-current="page">
+                  <i class="fa-solid fa-list"></i>
+                  <span class="ms-2 d-none d-sm-inline">CRUD Itens</span>
+                </a>
+              </li>
+              <li class="nav-item d-none" id="crudUsers">
+                <a href="./crud-users.html" class="nav-link" aria-current="page">
+                  <i class="fa-solid fa-users"></i>
+                  <span class="ms-2 d-none d-sm-inline">CRUD Users</span>
+                </a>
+              </li>
             </ul>
           </div>
           <div>
@@ -72,12 +90,12 @@
           </div>
         </div>
       </div>
-      <content>
+      <content id="isVisible">
         <div class="about">
           <h1>Membros</h1>
           <div class="members">
             <div id="cardMember">
-              <img src="https://github.com/flaviozno.png" alt="anderson" />
+              <img src="https://github.com/and19alves.png" alt="anderson" />
               <span>Anderson Alves Araújo</span>
               <i>12011BCC031</i>
             </div>
