--- a/src/pages/calculadora.html
+++ b/src/pages/calculadora.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Painel Usuário</title>
+    <title>Calculadora</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -15,11 +15,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../styles/GlobalThemes.css" />
+    <link rel="stylesheet" href="../styles/calculadora.css" />
   </head>
   <body>
     <div id="BaseLayoutContainer">
       <header class="text-white text-center py-2">
-        <h1>Conta</h1>
+        <h1>Calculadora</h1>
       </header>
       <div id="sidebar">
         <div
@@ -59,7 +60,11 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./calculadora.html" class="nav-link" aria-current="page">
+                <a
+                  href="./calculadora.html"
+                  class="nav-link"
+                  aria-current="page"
+                >
                   <i class="fa-solid fa-calculator"></i>
                   <span class="ms-2 d-none d-sm-inline">Calculadora</span>
                 </a>
@@ -71,7 +76,11 @@
                 </a>
               </li>
               <li class="nav-item d-none" id="crudItens">
-                <a href="./crud-itens.html" class="nav-link" aria-current="page">
+                <a
+                  href="./crud-itens.html"
+                  class="nav-link"
+                  aria-current="page"
+                >
                   <i class="fa-solid fa-list"></i>
                   <span class="ms-2 d-none d-sm-inline">CRUD Itens</span>
                 </a>
@@ -105,74 +114,69 @@
           </div>
         </div>
       </div>
-      <content id="isVisible" class="d-none">
-        <div class="row align-items-center">
-          <div class="header-text text-center">
-            <h2>Altere seus dados aqui!</h2>
+      <content id="isVisible">
+        <main>
+          <form>
+            <div class="form-floating mb-3">
+              <input
+                type="text"
+                class="form-control bg-light"
+                id="location"
+                required
+                placeholder="Insira sua localização"
+              />
+              <label for="location">Localização</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input
+                type="number"
+                class="form-control bg-light"
+                id="system-size"
+                required
+                min="1"
+                placeholder="Insira o tamanho do sistema"
+              />
+              <label for="system-size">Tamanho do Sistema (kW):</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input
+                type="number"
+                class="form-control bg-light"
+                id="initial-cost"
+                required
+                min="1"
+                placeholder="Insira o custo inicial"
+              />
+              <label for="initial-cost">Custo Inicial (R$):</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input
+                type="number"
+                class="form-control bg-light"
+                id="electricity-rate"
+                required
+                min="1"
+                placeholder="Insira a taxa de eletricidade"
+              />
+              <label for="electricity-rate"
+                >Taxa de Eletricidade (R$/kWh):</label
+              >
+            </div>
+            <div class="input-group mb-3">
+              <button
+                class="btn btn-lg btn-primary w-100 fs-6"
+                onclick="calculateSavings(event)"
+              >
+                Calcular Economia
+              </button>
+            </div>
+          </form>
+
+          <div id="results">
+            <p id="savings"></p>
           </div>
-          <div class="form-group mb-3">
-            <label for="photoUpload">Avatar: </label>
-            <input
-              type="file"
-              class="form-control-file"
-              id="photoUpload"
-              accept="image/*"
-            />
-            <div
-              id="photoPreview"
-              class="mt-3 d-flex justify-content-center align-items-center"
-            ></div>
-          </div>
-          <div class="form-floating mb-3">
-            <input
-              type="text"
-              class="form-control bg-light"
-              id="floatingName"
-              placeholder="Nome"
-            />
-            <label for="floatingName">Nome</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input
-              type="email"
-              class="form-control bg-light"
-              id="floatingEmail"
-              placeholder="Email"
-            />
-            <label for="floatingEmail">Email</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input
-              type="password"
-              readonly
-              class="form-control form-control-lg bg-light fs-6"
-              id="floatingPassword"
-              placeholder="Senha"
-            />
-            <label for="floatingPassword">Senha</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input
-              type="password"
-              readonly
-              class="form-control form-control-lg bg-light fs-6"
-              id="floatingPasswordConfirm"
-              placeholder="Confirmar Senha"
-            />
-            <label for="floatingPasswordConfirm">Confirmar Senha</label>
-          </div>
-          <div
-            class="input-group mb-3 align-items-center justify-content-center"
-          >
-            <button
-              class="btn btn-lg btn-primary w-10 fs-6"
-              onclick="handleEdit(event)"
-            >
-              Salvar
-            </button>
-          </div>
-        </div></content
-      >
+        </main>
+      </content>
       <footer class="text-center py-1">
         <p>&copy; 2023 Solaris Power. Todos os direitos reservados.</p>
       </footer>
@@ -181,7 +185,8 @@
   <script type="text/javascript" src="../utils/handleUser.js"></script>
   <script type="text/javascript" src="../utils/permission.js"></script>
   <script type="text/javascript" src="../constants/index.js"></script>
-  
+  <script type="text/javascript" src="../utils/index.js"></script>
+  <script src="../scripts/calculadora.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"
