--- a/src/pages/crud-users.html
+++ b/src/pages/crud-users.html
@@ -64,6 +64,18 @@
                   <span class="ms-2 d-none d-sm-inline">Produtos</span>
                 </a>
               </li>
+              <li class="nav-item">
+                <a href="./galeria.html" class="nav-link" aria-current="page">
+                  <i class="fa-solid fa-image"></i>
+                  <span class="ms-2 d-none d-sm-inline">Galeria</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="./calculadora.html" class="nav-link" aria-current="page">
+                  <i class="fa-solid fa-calculator"></i>
+                  <span class="ms-2 d-none d-sm-inline">Calculadora</span>
+                </a>
+              </li>
               <li class="nav-item d-none" id="account">
                 <a href="./account.html" class="nav-link" aria-current="page">
                   <i class="fa-solid fa-user"></i>
