--- a/src/pages/produtos.html
+++ b/src/pages/produtos.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../styles/GlobalThemes.css" />
-    <link rel="stylesheet" href="../styles/cardProduct.css" />
+    <link rel="stylesheet" href="../styles/card.css" />
   </head>
   <body>
     <div id="BaseLayoutContainer">
@@ -51,6 +51,18 @@
                 <a href="./produtos.html" class="nav-link" aria-current="page">
                   <i class="fa-solid fa-store"></i>
                   <span class="ms-2 d-none d-sm-inline">Produtos</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="./galeria.html" class="nav-link" aria-current="page">
+                  <i class="fa-solid fa-image"></i>
+                  <span class="ms-2 d-none d-sm-inline">Galeria</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="./calculadora.html" class="nav-link" aria-current="page">
+                  <i class="fa-solid fa-calculator"></i>
+                  <span class="ms-2 d-none d-sm-inline">Calculadora</span>
                 </a>
               </li>
               <li class="nav-item d-none" id="account">
