--- a/src/faq.html
+++ b/src/faq.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
-    <link rel="stylesheet" href="../styles/faq.css" />
+    <link rel="stylesheet" href="./styles/faq.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Perguntas Frequentes - Energia Solar</title>
