--- a/src/profissionais.html
+++ b/src/profissionais.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Consulte Profissionais de Energia Solar</title>
-    <link rel="stylesheet" href="../styles/GlobalThemes.css" />
-    <link rel="stylesheet" href="../styles/prof.css" />
+    <link rel="stylesheet" href="./styles/GlobalThemes.css" />
+    <link rel="stylesheet" href="./styles/prof.css" />
   </head>
   <body>
     <div class="container">
