--- a/src/calculadora.html
+++ b/src/calculadora.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Home Page</title>
+    <title>Calculadora</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -14,13 +14,13 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../styles/GlobalThemes.css" />
-    <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="./styles/GlobalThemes.css" />
+    <link rel="stylesheet" href="./styles/calculadora.css" />
   </head>
   <body>
     <div id="BaseLayoutContainer">
       <header class="text-white text-center py-2">
-        <h1>Home</h1>
+        <h1>Calculadora</h1>
       </header>
       <div id="sidebar">
         <div
@@ -60,7 +60,11 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./calculadora.html" class="nav-link" aria-current="page">
+                <a
+                  href="./calculadora.html"
+                  class="nav-link"
+                  aria-current="page"
+                >
                   <i class="fa-solid fa-calculator"></i>
                   <span class="ms-2 d-none d-sm-inline">Calculadora</span>
                 </a>
@@ -111,79 +115,78 @@
         </div>
       </div>
       <content id="isVisible">
-        <div class="container__content">
-          <h3>Valores</h3>
-          <p>
-            Alguns pilares que sustentam nossa equipe e fazem com que nossos
-            clientes tenham a melhor experiência.
-          </p>
-        </div>
-        <div class="cards">
-          <div class="cards__item">
-            <i class="fa-solid fa-sack-dollar"></i>
-            <h3>Custos</h3>
-            <p>
-              Reduzindo sua conta de energia, visando à sustentabilidade
-              institucional.
-            </p>
-          </div>
-          <div class="cards__item">
-            <i class="fa-brands fa-pagelines"></i>
-            <h3>Sustentabilidade</h3>
-            <p>Contribuindo para um meio ambiente mais limpo.</p>
-          </div>
-          <div class="cards__item">
-            <i class="fa-solid fa-lightbulb"></i>
-            <h3>Energia</h3>
-            <p>
-              Promovendo a independência energética que irá benificiar você e o
-              planeta.
-            </p>
-          </div>
-        </div>
-        <div class="divider d1"> </div>
-        <div class="divider d2"> </div>
-        <div class="container__content content--left">
-          <h3>Recursos</h3>
-          <p>Explore nossos recursos e descubra o potêncial completo.</p>
-        </div>
-        <div class="points">
-          <i class="fa-solid fa-solar-panel"></i>
-          <div class="points__bullets">
-            <div>
-              <h2><a href="./calculadora.html">Calculadora</a></h2>
-              <p>Calcule sua Economia de Energia Solar</p>
+        <main>
+          <form>
+            <div class="form-floating mb-3">
+              <input
+                type="text"
+                class="form-control bg-light"
+                id="location"
+                required
+                placeholder="Insira sua localização"
+              />
+              <label for="location">Localização</label>
             </div>
-            <div>
-              <h2><a href="galeria.html">Galeria</a></h2>
-              <p>Inspire-se com nossa Galeria de Projetos</p>
+            <div class="form-floating mb-3">
+              <input
+                type="number"
+                class="form-control bg-light"
+                id="system-size"
+                required
+                min="1"
+                placeholder="Insira o tamanho do sistema"
+              />
+              <label for="system-size">Tamanho do Sistema (kW):</label>
             </div>
+            <div class="form-floating mb-3">
+              <input
+                type="number"
+                class="form-control bg-light"
+                id="initial-cost"
+                required
+                min="1"
+                placeholder="Insira o custo inicial"
+              />
+              <label for="initial-cost">Custo Inicial (R$):</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input
+                type="number"
+                class="form-control bg-light"
+                id="electricity-rate"
+                required
+                min="1"
+                placeholder="Insira a taxa de eletricidade"
+              />
+              <label for="electricity-rate"
+                >Taxa de Eletricidade (R$/kWh):</label
+              >
+            </div>
+            <div class="input-group mb-3">
+              <button
+                class="btn btn-lg btn-primary w-100 fs-6"
+                onclick="calculateSavings(event)"
+              >
+                Calcular Economia
+              </button>
+            </div>
+          </form>
+
+          <div id="results">
+            <p id="savings"></p>
           </div>
-        </div>
-        <div class="container__content">
-          <h3>Encontre Profissionais Locais</h3>
-          <p>
-            Precisa de ajuda para instalar seus painéis solares?
-            <a href="profissionais.html">Consulte Profissionais</a> de energia
-            solar em sua região.
-          </p>
-        </div>
-        <div class="container__content content--left">
-          <h3>Perguntas Frequentes</h3>
-          <p>
-            Tire suas dúvidas com nossas
-            <a href="faq.html">Perguntas Frequentes</a> sobre energia solar.
-          </p>
-        </div>
+        </main>
       </content>
       <footer class="text-center py-1">
         <p>&copy; 2023 Solaris Power. Todos os direitos reservados.</p>
       </footer>
     </div>
   </body>
-  <script type="text/javascript" src="../utils/handleUser.js"></script>
-  <script type="text/javascript" src="../utils/permission.js"></script>
-  <script type="text/javascript" src="../constants/index.js"></script>
+  <script type="text/javascript" src="./utils/handleUser.js"></script>
+  <script type="text/javascript" src="./utils/permission.js"></script>
+  <script type="text/javascript" src="./constants/index.js"></script>
+  <script type="text/javascript" src="./utils/index.js"></script>
+  <script src="./scripts/calculadora.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"
