--- a/src/crud-users.html
+++ b/src/crud-users.html
@@ -26,7 +26,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../styles/GlobalThemes.css" />
+    <link rel="stylesheet" href="./styles/GlobalThemes.css" />
   </head>
   <body>
     <div id="BaseLayoutContainer">
@@ -131,10 +131,10 @@
       </footer>
     </div>
   </body>
-  <script type="text/javascript" src="../utils/handleUser.js"></script>
-  <script type="text/javascript" src="../utils/permission.js"></script>
-  <script type="text/javascript" src="../constants/index.js"></script>
-  <script type="text/javascript" src="../db/index.js"></script>
+  <script type="text/javascript" src="./utils/handleUser.js"></script>
+  <script type="text/javascript" src="./utils/permission.js"></script>
+  <script type="text/javascript" src="./constants/index.js"></script>
+  <script type="text/javascript" src="./db/index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
   <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
@@ -145,5 +145,5 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   ></script>
-  <script type="text/javascript" src="../services/dataTable.js"></script>
+  <script type="text/javascript" src="./services/dataTable.js"></script>
 </html>
