--- a/src/galeria.html
+++ b/src/galeria.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Calculadora</title>
+    <title>Galeria</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -14,13 +14,13 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../styles/GlobalThemes.css" />
-    <link rel="stylesheet" href="../styles/calculadora.css" />
+    <link rel="stylesheet" href="./styles/GlobalThemes.css" />
+    <link rel="stylesheet" href="./styles/card.css" />
   </head>
   <body>
     <div id="BaseLayoutContainer">
       <header class="text-white text-center py-2">
-        <h1>Calculadora</h1>
+        <h1>Galeria</h1>
       </header>
       <div id="sidebar">
         <div
@@ -115,78 +115,65 @@
         </div>
       </div>
       <content id="isVisible">
-        <main>
-          <form>
-            <div class="form-floating mb-3">
-              <input
-                type="text"
-                class="form-control bg-light"
-                id="location"
-                required
-                placeholder="Insira sua localização"
-              />
-              <label for="location">Localização</label>
-            </div>
-            <div class="form-floating mb-3">
-              <input
-                type="number"
-                class="form-control bg-light"
-                id="system-size"
-                required
-                min="1"
-                placeholder="Insira o tamanho do sistema"
-              />
-              <label for="system-size">Tamanho do Sistema (kW):</label>
-            </div>
-            <div class="form-floating mb-3">
-              <input
-                type="number"
-                class="form-control bg-light"
-                id="initial-cost"
-                required
-                min="1"
-                placeholder="Insira o custo inicial"
-              />
-              <label for="initial-cost">Custo Inicial (R$):</label>
-            </div>
-            <div class="form-floating mb-3">
-              <input
-                type="number"
-                class="form-control bg-light"
-                id="electricity-rate"
-                required
-                min="1"
-                placeholder="Insira a taxa de eletricidade"
-              />
-              <label for="electricity-rate"
-                >Taxa de Eletricidade (R$/kWh):</label
-              >
-            </div>
-            <div class="input-group mb-3">
-              <button
-                class="btn btn-lg btn-primary w-100 fs-6"
-                onclick="calculateSavings(event)"
-              >
-                Calcular Economia
-              </button>
-            </div>
-          </form>
-
-          <div id="results">
-            <p id="savings"></p>
+        <div id="produtos">
+          <div id="contentCard">
+            <img src="./assets/casa.jpeg" alt="Projeto 1"/>
+            <h3>Residência em São Paulo</h3>
+            <p>
+              Esta residência em São Paulo adotou a energia solar para reduzir
+              os custos de energia e reduzir a pegada de carbono.
+            </p>
+            <ul>
+              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star"></i></li>
+            </ul>
           </div>
-        </main>
+
+          <div id="contentCard">
+            <img src="./assets/empresa.jpg" alt="Projeto 2" />
+            <h3>Empresa de Tecnologia em Curitiba</h3>
+            <p>
+              Uma empresa de tecnologia em Curitiba instalou um grande sistema
+              solar para alimentar suas operações e contribuir para a
+              sustentabilidade.
+            </p>
+            <ul>
+              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star"></i></li>
+            </ul>
+          </div>
+
+          <div id="contentCard">
+            <img src="./assets/escola.jpeg" alt="Projeto 3" />
+            <h3>Escola em Brasília</h3>
+            <p>
+              Uma escola em Brasília adotou a energia solar como parte de seu
+              compromisso com a educação ambiental e a responsabilidade social.
+            </p>
+            <ul>
+              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star"></i></li>
+            </ul>
+          </div>
+        </div>
       </content>
       <footer class="text-center py-1">
         <p>&copy; 2023 Solaris Power. Todos os direitos reservados.</p>
       </footer>
     </div>
   </body>
-  <script type="text/javascript" src="../utils/handleUser.js"></script>
-  <script type="text/javascript" src="../utils/permission.js"></script>
-  <script type="text/javascript" src="../constants/index.js"></script>
-  <script type="text/javascript" src="../utils/index.js"></script>
-  <script src="../scripts/calculadora.js"></script>
+  <script type="text/javascript" src="./utils/handleUser.js"></script>
+  <script type="text/javascript" src="./utils/permission.js"></script>
+  <script type="text/javascript" src="./constants/index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"
