--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Crud Itens</title>
+    <title>Home Page</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -11,27 +11,16 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.css"
-    />
-    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../styles/GlobalThemes.css" />
+    <link rel="stylesheet" href="./styles/GlobalThemes.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body>
     <div id="BaseLayoutContainer">
       <header class="text-white text-center py-2">
-        <h1>Crud Itens</h1>
+        <h1>Home</h1>
       </header>
       <div id="sidebar">
         <div
@@ -83,13 +72,21 @@
                 </a>
               </li>
               <li class="nav-item d-none" id="crudItens">
-                <a href="./crud-itens.html" class="nav-link" aria-current="page">
+                <a
+                  href="./crud-itens.html"
+                  class="nav-link"
+                  aria-current="page"
+                >
                   <i class="fa-solid fa-list"></i>
                   <span class="ms-2 d-none d-sm-inline">CRUD Itens</span>
                 </a>
               </li>
               <li class="nav-item d-none" id="crudUsers">
-                <a href="./account.html" class="nav-link" aria-current="page">
+                <a
+                  href="./crud-users.html"
+                  class="nav-link"
+                  aria-current="page"
+                >
                   <i class="fa-solid fa-users"></i>
                   <span class="ms-2 d-none d-sm-inline">CRUD Users</span>
                 </a>
@@ -113,40 +110,85 @@
           </div>
         </div>
       </div>
-      <content id="isVisible" class="d-none">
-        <table id="itensTable" class="table table-striped" style="width: 100%">
-          <thead>
-            <tr>
-              <th>Id</th>
-              <th>Nome</th>
-              <th>Descrição</th>
-              <th>URL Img</th>
-              <th>Qtd</th>
-              <th>Preço</th>
-              <th>Ação</th>
-            </tr>
-          </thead>
-        </table>
+      <content id="isVisible">
+        <div class="container__content">
+          <h3>Valores</h3>
+          <p>
+            Alguns pilares que sustentam nossa equipe e fazem com que nossos
+            clientes tenham a melhor experiência.
+          </p>
+        </div>
+        <div class="cards">
+          <div class="cards__item">
+            <i class="fa-solid fa-sack-dollar"></i>
+            <h3>Custos</h3>
+            <p>
+              Reduzindo sua conta de energia, visando à sustentabilidade
+              institucional.
+            </p>
+          </div>
+          <div class="cards__item">
+            <i class="fa-brands fa-pagelines"></i>
+            <h3>Sustentabilidade</h3>
+            <p>Contribuindo para um meio ambiente mais limpo.</p>
+          </div>
+          <div class="cards__item">
+            <i class="fa-solid fa-lightbulb"></i>
+            <h3>Energia</h3>
+            <p>
+              Promovendo a independência energética que irá benificiar você e o
+              planeta.
+            </p>
+          </div>
+        </div>
+        <div class="divider d1"> </div>
+        <div class="divider d2"> </div>
+        <div class="container__content content--left">
+          <h3>Recursos</h3>
+          <p>Explore nossos recursos e descubra o potêncial completo.</p>
+        </div>
+        <div class="points">
+          <i class="fa-solid fa-solar-panel"></i>
+          <div class="points__bullets">
+            <div>
+              <h2><a href="./calculadora.html">Calculadora</a></h2>
+              <p>Calcule sua Economia de Energia Solar</p>
+            </div>
+            <div>
+              <h2><a href="galeria.html">Galeria</a></h2>
+              <p>Inspire-se com nossa Galeria de Projetos</p>
+            </div>
+          </div>
+        </div>
+        <div class="container__content">
+          <h3>Encontre Profissionais Locais</h3>
+          <p>
+            Precisa de ajuda para instalar seus painéis solares?
+            <a href="profissionais.html">Consulte Profissionais</a> de energia
+            solar em sua região.
+          </p>
+        </div>
+        <div class="container__content content--left">
+          <h3>Perguntas Frequentes</h3>
+          <p>
+            Tire suas dúvidas com nossas
+            <a href="faq.html">Perguntas Frequentes</a> sobre energia solar.
+          </p>
+        </div>
       </content>
       <footer class="text-center py-1">
         <p>&copy; 2023 Solaris Power. Todos os direitos reservados.</p>
       </footer>
     </div>
   </body>
-  <script type="text/javascript" src="../utils/handleUser.js"></script>
-  <script type="text/javascript" src="../utils/index.js"></script>
-  <script type="text/javascript" src="../utils/permission.js"></script>
-  <script type="text/javascript" src="../constants/index.js"></script>
-  <script type="text/javascript" src="../db/index.js"></script>
+  <script type="text/javascript" src="./utils/handleUser.js"></script>
+  <script type="text/javascript" src="./utils/permission.js"></script>
+  <script type="text/javascript" src="./constants/index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-  <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
-  <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"
     integrity="sha512-emSwuKiMyYedRwflbZB2ghzX8Cw8fmNVgZ6yQNNXXagFzFOaQmbvQ1vmDkddHjm5AITcBIZfC7k4ShQSjgPAmQ=="
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   ></script>
-  <script type="text/javascript" src="../services/dataTable.js"></script>
 </html>
