--- a/src/login.html
+++ b/src/login.html
@@ -11,7 +11,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../styles/GlobalThemes.css" />
+    <link rel="stylesheet" href="./styles/GlobalThemes.css" />
     <title>Login</title>
   </head>
   <body>
@@ -86,6 +86,6 @@
     </div>
   </body>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script type="text/javascript" src="../utils/handleUser.js"></script>
-  <script type="text/javascript" src="../db/index.js"></script>
+  <script type="text/javascript" src="./utils/handleUser.js"></script>
+  <script type="text/javascript" src="./db/index.js"></script>
 </html>
