--- a/src/produtos.html
+++ b/src/produtos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>About us</title>
+    <title>Products</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -14,13 +14,13 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../styles/GlobalThemes.css" />
-    <link rel="stylesheet" href="../styles/about.css" />
+    <link rel="stylesheet" href="./styles/GlobalThemes.css" />
+    <link rel="stylesheet" href="./styles/card.css" />
   </head>
   <body>
     <div id="BaseLayoutContainer">
       <header class="text-white text-center py-2">
-        <h1>Sobre</h1>
+        <h1>Produtos</h1>
       </header>
       <div id="sidebar">
         <div
@@ -60,7 +60,11 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./calculadora.html" class="nav-link" aria-current="page">
+                <a
+                  href="./calculadora.html"
+                  class="nav-link"
+                  aria-current="page"
+                >
                   <i class="fa-solid fa-calculator"></i>
                   <span class="ms-2 d-none d-sm-inline">Calculadora</span>
                 </a>
@@ -72,13 +76,21 @@
                 </a>
               </li>
               <li class="nav-item d-none" id="crudItens">
-                <a href="./crud-itens.html" class="nav-link" aria-current="page">
+                <a
+                  href="./crud-itens.html"
+                  class="nav-link"
+                  aria-current="page"
+                >
                   <i class="fa-solid fa-list"></i>
                   <span class="ms-2 d-none d-sm-inline">CRUD Itens</span>
                 </a>
               </li>
               <li class="nav-item d-none" id="crudUsers">
-                <a href="./crud-users.html" class="nav-link" aria-current="page">
+                <a
+                  href="./crud-users.html"
+                  class="nav-link"
+                  aria-current="page"
+                >
                   <i class="fa-solid fa-users"></i>
                   <span class="ms-2 d-none d-sm-inline">CRUD Users</span>
                 </a>
@@ -103,35 +115,14 @@
         </div>
       </div>
       <content id="isVisible">
-        <div class="about">
-          <h1>Membros</h1>
-          <div class="members">
-            <div id="cardMember">
-              <img src="https://github.com/and19alves.png" alt="anderson" />
-              <span>Anderson Alves Araújo</span>
-              <i>12011BCC031</i>
-            </div>
-            <div id="cardMember">
-              <img src="https://github.com/BruggerPedro.png" alt="pedro" />
-              <span>Pedro Murilo Brugger</span>
-              <i>12011BCC054</i>
-            </div>
-            <div id="cardMember">
-              <img src="https://github.com/flaviozno.png" alt="flavio" />
-              <span>Flávio Vezono Filho</span>
-              <i>11921BCC014</i>
-            </div>
-          </div>
-          <h1>Matéria</h1>
-          <div id="cardMember">
-            <img
-              src="https://www.facom.ufu.br/~rafaelaraujo/img/profile.jpg"
-              alt="Ragael Araújo"
-            />
-            <span>Rafael Dias Araújo</span>
-            <i>Professor</i>
-          </div>
-          <p>Programação para a Internet</p>
+        <div id="produtosWrapper">
+          <form>
+            <input id="searchBar" placeholder="Busca..." autocomplete="off" />
+            <button type="submit">
+              <i class="fa-solid fa-magnifying-glass"></i>
+            </button>
+          </form>
+          <div id="produtos"></div>
         </div>
       </content>
       <footer class="text-center py-1">
@@ -139,10 +130,11 @@
       </footer>
     </div>
   </body>
-  <script type="text/javascript" src="../utils/handleUser.js"></script>
-  <script type="text/javascript" src="../services/api.js"></script>
-  <script type="text/javascript" src="../utils/permission.js"></script>
-  <script type="text/javascript" src="../constants/index.js"></script>
+  <script type="text/javascript" src="./utils/handleUser.js"></script>
+  <script type="text/javascript" src="./utils/products.js"></script>
+  <script type="text/javascript" src="./utils/index.js"></script>
+  <script type="text/javascript" src="./utils/permission.js"></script>
+  <script type="text/javascript" src="./constants/index.js"></script>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"
     integrity="sha512-emSwuKiMyYedRwflbZB2ghzX8Cw8fmNVgZ6yQNNXXagFzFOaQmbvQ1vmDkddHjm5AITcBIZfC7k4ShQSjgPAmQ=="
