--- a/src/produtos.html
+++ b/src/produtos.html
@@ -130,9 +130,10 @@
       </footer>
     </div>
   </body>
+  <script type="text/javascript" src="./constants/data.js"></script>
   <script type="text/javascript" src="./utils/handleUser.js"></script>
-  <script type="text/javascript" src="./utils/products.js"></script>
   <script type="text/javascript" src="./utils/index.js"></script>
+  <script type="text/javascript" src="./utils/products.js"></script>
   <script type="text/javascript" src="./utils/permission.js"></script>
   <script type="text/javascript" src="./constants/index.js"></script>
   <script
