--- a/src/crud-itens.html
+++ b/src/crud-itens.html
@@ -133,6 +133,7 @@
       </footer>
     </div>
   </body>
+  <script type="text/javascript" src="./constants/data.js"></script>
   <script type="text/javascript" src="./utils/handleUser.js"></script>
   <script type="text/javascript" src="./utils/index.js"></script>
   <script type="text/javascript" src="./utils/permission.js"></script>
@@ -148,5 +149,5 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   ></script>
-  <script type="text/javascript" src="./services/dataTable.js"></script>
+  <script type="text/javascript" src="./services/dataTableItens.js"></script>
 </html>
