--- a/src/crud-users.html
+++ b/src/crud-users.html
@@ -131,10 +131,12 @@
       </footer>
     </div>
   </body>
-  <script type="text/javascript" src="./utils/handleUser.js"></script>
-  <!-- <script type="text/javascript" src="./utils/permission.js"></script> -->
-  <script type="text/javascript" src="./constants/index.js"></script>
   <script type="text/javascript" src="./db/index.js"></script>
+  <script type="text/javascript" src="./utils/handleUser.js"></script>
+  <script type="text/javascript" src="./utils/permission.js"></script>
+  <script type="text/javascript" src="./constants/index.js"></script>
+  <script type="text/javascript" src="./constants/data.js"></script>
+  
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
   <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
