--- a/src/galeria.html
+++ b/src/galeria.html
@@ -116,51 +116,70 @@
       </div>
       <content id="isVisible">
         <div id="produtos">
-          <div id="contentCard">
-            <img src="./assets/casa.jpeg" alt="Projeto 1"/>
-            <h3>Residência em São Paulo</h3>
-            <p>
-              Esta residência em São Paulo adotou a energia solar para reduzir
-              os custos de energia e reduzir a pegada de carbono.
-            </p>
+          <div class="card">
+            <img
+              src="./assets/casa.jpeg"
+              alt="Projeto 1"
+              class="card-img-top"
+            />
+            <div class="card-body">
+              <h5>Residência em São Paulo</h5>
+              <p>
+                Esta residência em São Paulo adotou a energia solar para reduzir
+                os custos de energia e reduzir a pegada de carbono.
+              </p>
+            </div>
             <ul>
-              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
-              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
-              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
-              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star" style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star" style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star" style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star" style="color: yellow"></i></li>
               <li><i class="fa-solid fa-star"></i></li>
             </ul>
           </div>
 
-          <div id="contentCard">
-            <img src="./assets/empresa.jpg" alt="Projeto 2" />
-            <h3>Empresa de Tecnologia em Curitiba</h3>
-            <p>
-              Uma empresa de tecnologia em Curitiba instalou um grande sistema
-              solar para alimentar suas operações e contribuir para a
-              sustentabilidade.
-            </p>
+          <div class="card">
+            <img
+              src="./assets/empresa.jpg"
+              alt="Projeto 2"
+              class="card-img-top"
+            />
+            <div class="card-body">
+              <h5>Empresa de Tecnologia em Curitiba</h5>
+              <p>
+                Uma empresa de tecnologia em Curitiba instalou um grande sistema
+                solar para alimentar suas operações e contribuir para a
+                sustentabilidade.
+              </p>
+            </div>
             <ul>
-              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
-              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
-              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
-              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star" style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star" style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star" style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star" style="color: yellow"></i></li>
               <li><i class="fa-solid fa-star"></i></li>
             </ul>
           </div>
 
-          <div id="contentCard">
-            <img src="./assets/escola.jpeg" alt="Projeto 3" />
-            <h3>Escola em Brasília</h3>
-            <p>
-              Uma escola em Brasília adotou a energia solar como parte de seu
-              compromisso com a educação ambiental e a responsabilidade social.
-            </p>
+          <div class="card">
+            <img
+              src="./assets/escola.jpeg"
+              alt="Projeto 3"
+              class="card-img-top"
+            />
+            <div class="card-body">
+              <h5>Escola em Brasília</h5>
+              <p>
+                Uma escola em Brasília adotou a energia solar como parte de seu
+                compromisso com a educação ambiental e a responsabilidade
+                social.
+              </p>
+            </div>
             <ul>
-              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
-              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
-              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
-              <li><i class="fa-solid fa-star"  style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star" style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star" style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star" style="color: yellow"></i></li>
+              <li><i class="fa-solid fa-star" style="color: yellow"></i></li>
               <li><i class="fa-solid fa-star"></i></li>
             </ul>
           </div>
