--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,11 @@
     />
     <link rel="stylesheet" href="./styles/GlobalThemes.css" />
     <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/responsive.css" />
   </head>
   <body>
     <div id="BaseLayoutContainer">
-      <header class="text-white text-center py-2">
+      <header class="text-white text-center">
         <h1>Página Inicial - Solaris Power</h1>
       </header>
       <div id="sidebar">
