backend OK and connect with front

--- a/src/account.html
+++ b/src/account.html
@@ -135,6 +135,7 @@
           <div class="form-floating mb-3">
             <input
               type="email"
+              readonly
               class="form-control bg-light"
               id="floatingEmail"
               placeholder="Email"
