--- a/src/crud-itens.html
+++ b/src/crud-itens.html
@@ -71,7 +71,11 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./calculadora.html" class="nav-link" aria-current="page">
+                <a
+                  href="./calculadora.html"
+                  class="nav-link"
+                  aria-current="page"
+                >
                   <i class="fa-solid fa-calculator"></i>
                   <span class="ms-2 d-none d-sm-inline">Calculadora</span>
                 </a>
@@ -83,7 +87,11 @@
                 </a>
               </li>
               <li class="nav-item d-none" id="crudItens">
-                <a href="./crud-itens.html" class="nav-link" aria-current="page">
+                <a
+                  href="./crud-itens.html"
+                  class="nav-link"
+                  aria-current="page"
+                >
                   <i class="fa-solid fa-list"></i>
                   <span class="ms-2 d-none d-sm-inline">CRUD Itens</span>
                 </a>
@@ -133,7 +141,6 @@
       </footer>
     </div>
   </body>
-  <script type="text/javascript" src="./constants/data.js"></script>
   <script type="text/javascript" src="./utils/handleUser.js"></script>
   <script type="text/javascript" src="./utils/index.js"></script>
   <script type="text/javascript" src="./utils/permission.js"></script>
