--- a/src/crud-users.html
+++ b/src/crud-users.html
@@ -71,7 +71,11 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./calculadora.html" class="nav-link" aria-current="page">
+                <a
+                  href="./calculadora.html"
+                  class="nav-link"
+                  aria-current="page"
+                >
                   <i class="fa-solid fa-calculator"></i>
                   <span class="ms-2 d-none d-sm-inline">Calculadora</span>
                 </a>
@@ -83,7 +87,11 @@
                 </a>
               </li>
               <li class="nav-item d-none" id="crudItens">
-                <a href="./crud-itens.html" class="nav-link" aria-current="page">
+                <a
+                  href="./crud-itens.html"
+                  class="nav-link"
+                  aria-current="page"
+                >
                   <i class="fa-solid fa-list"></i>
                   <span class="ms-2 d-none d-sm-inline">CRUD Itens</span>
                 </a>
@@ -131,21 +139,15 @@
       </footer>
     </div>
   </body>
-  <script type="text/javascript" src="./db/index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script type="text/javascript" src="./api/index.js"></script>
   <script type="text/javascript" src="./utils/handleUser.js"></script>
   <script type="text/javascript" src="./utils/permission.js"></script>
   <script type="text/javascript" src="./constants/index.js"></script>
-  <script type="text/javascript" src="./constants/data.js"></script>
-  
+
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
   <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
   <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"
-    integrity="sha512-emSwuKiMyYedRwflbZB2ghzX8Cw8fmNVgZ6yQNNXXagFzFOaQmbvQ1vmDkddHjm5AITcBIZfC7k4ShQSjgPAmQ=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  ></script>
   <script type="text/javascript" src="./services/dataTable.js"></script>
 </html>
