--- a/src/login.html
+++ b/src/login.html
@@ -86,6 +86,8 @@
     </div>
   </body>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script type="text/javascript" src="./utils/handleUser.js"></script>
   <script type="text/javascript" src="./db/index.js"></script>
+  <script type="text/javascript" src="./api/index.js"></script>
 </html>
