--- a/src/crud-itens.html
+++ b/src/crud-itens.html
@@ -10,14 +10,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css"
-    />
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
     <link
       rel="stylesheet"
       href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.css"
@@ -122,10 +117,17 @@
         </div>
       </div>
       <content id="isVisible" class="d-none">
+        <button
+          type="button"
+          class="btn btn-primary"
+          data-bs-toggle="modal"
+          data-bs-target="#modalProducts"
+        >
+          Adicionar Produto
+        </button>
         <table id="itensTable" class="table table-striped" style="width: 100%">
           <thead>
             <tr>
-              <th>Id</th>
               <th>Nome</th>
               <th>Descrição</th>
               <th>URL Img</th>
@@ -135,6 +137,102 @@
             </tr>
           </thead>
         </table>
+        <div
+          class="modal fade"
+          id="modalProducts"
+          tabindex="-1"
+          aria-labelledby="exampleModalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Add Product</h5>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="modal-body">
+                <form id="productForm">
+                  <div class="mb-3">
+                    <label for="productName" class="form-label"
+                      >Product Name</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="productName"
+                      name="productName"
+                      required
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <label for="productDescription" class="form-label"
+                      >Product Description</label
+                    >
+                    <textarea
+                      class="form-control"
+                      id="productDescription"
+                      name="productDescription"
+                      rows="3"
+                      required
+                    ></textarea>
+                  </div>
+                  <div class="mb-3">
+                    <label for="productQuantity" class="form-label"
+                      >Quantity</label
+                    >
+                    <input
+                      type="number"
+                      class="form-control"
+                      id="productQuantity"
+                      name="productQuantity"
+                      required
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <label for="productPrice" class="form-label">Price</label>
+                    <input
+                      type="number"
+                      class="form-control"
+                      id="productPrice"
+                      name="productPrice"
+                      step="0.01"
+                      required
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <label for="productImageUrl" class="form-label"
+                      >Image URL</label
+                    >
+                    <input
+                      type="url"
+                      class="form-control"
+                      id="productImageUrl"
+                      name="productImageUrl"
+                      required
+                    />
+                  </div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-secondary"
+                      data-bs-dismiss="modal"
+                    >
+                      Close
+                    </button>
+                    <button type="submit" class="btn btn-primary">
+                      Save changes
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
       </content>
       <footer class="text-center py-1">
         <p>&copy; 2023 Solaris Power. Todos os direitos reservados.</p>
@@ -145,7 +243,6 @@
   <script type="text/javascript" src="./utils/index.js"></script>
   <script type="text/javascript" src="./utils/permission.js"></script>
   <script type="text/javascript" src="./constants/index.js"></script>
-  <script type="text/javascript" src="./db/index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
   <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
@@ -157,4 +254,48 @@
     referrerpolicy="no-referrer"
   ></script>
   <script type="text/javascript" src="./services/dataTableItens.js"></script>
+  <script>
+    $(document).ready(function () {
+      $("#productForm").submit(function (event) {
+        event.preventDefault();
+
+        const formData = {
+          productName: $("#productName").val(),
+          productDescription: $("#productDescription").val(),
+          productQuantity: $("#productQuantity").val(),
+          productPrice: $("#productPrice").val(),
+          productImageUrl: $("#productImageUrl").val(),
+        };
+
+        createProduct(formData);
+
+        $("#modalProducts").modal("hide");
+      });
+    });
+  </script>
+  <script>
+    const createProduct = (formData) => {
+      return new Promise((resolve, reject) => {
+        const xhr = new XMLHttpRequest();
+
+        xhr.open("POST", "http://localhost:3333/api/products", true);
+        xhr.setRequestHeader("Content-Type", "application/json");
+
+        xhr.onreadystatechange = function () {
+          if (xhr.readyState === 4) {
+            if (xhr.status === 201) {
+              resolve(JSON.parse(xhr.responseText));
+              window.location.reload();
+            } else {
+              reject(new Error(`Error in request: ${xhr.status}`));
+            }
+          }
+        };
+
+        const jsonData = JSON.stringify(formData);
+
+        xhr.send(jsonData);
+      });
+    };
+  </script>
 </html>
