--- a/src/account.html
+++ b/src/account.html
@@ -105,7 +105,7 @@
           </div>
         </div>
       </div>
-      <content id="isVisible" class="d-none">
+      <content id="isVisibleUser" class="d-none">
         <div class="row align-items-center">
           <div class="header-text text-center">
             <h2>Altere seus dados aqui!</h2>
